# gt2

./: .gitignore  BACKWARD_PASS_ANALYSIS.md  BUG_FIXES_SUMMARY.md  CLAUDE.md  COMPILATION_STATUS.md  DISPATCHER_OPTIMIZATION_TODO.md  PERFORMANCE.md  PROTOCOL_TESTING.md  README.md  REFACTOR_STATUS.md  SHARDING_STRATEGIES.md  STREAM_ARCHITECTURE.md  TODO.md  TODO_MLP_TRAINING.md  bleh.py  bleh2.py  debug_sharding.py  launch.py  launch_v2.py  pyproject.toml  requirements.txt  setup.py  simple_launch.py  test_broadcasting_bug.py  test_hotpath.py  test_matmul_batches.py  test_matmul_training.py  test_param_shapes.py  test_protocol_smoke.py  test_simple.py
.claude/: settings.local.json
benchmarks/: AUTO_SHARD_README.md  README.md  README_COMPILATION.md  auto_hotpath.py  auto_shard_benchmark.py  bench_serialization.py  benchmark_compile.py  compare.py  compilation_benchmark.py  gt_benchmark.py  hotpath_detection.py  launch_8gpu_benchmark.sh  matmul_sum.py  micro_matmul.py  profile_detailed.py  profile_matmul.py  profile_overhead.py  pytorch_baseline.py  quick_benchmark.py  signal_compilation.py  test_msgpack_numpy.py
dev-notes/: FIXES_APPLIED.md  PERFORMANCE.md  README.md
dev-scripts/: README.md  test_matmul_transpose_batch.py  test_subscripting.py
docs/: BATCHING_AND_COMPILATION.md  README.md  _sidebar.md  contributing.md  index.html  installation.md  license.md  usage.md
docs/client/: autograd.md  tensor-api.md
docs/dispatcher/: monitoring.md  signaling.md  tuning.md
docs/worker/: backends.md  compilation.md
examples/: README.md  README_SIGNALS.md  compile_demo.py  config_compile.yaml  config_from_python.py  config_sharding.yaml  debug_demo.py  demo.py  demo_auto_shard.py  show_stats.py  signal_demo.py  simple_auto_shard.py  simple_gpu_workers.py  simplest_auto_shard.py  train_mlp_gt.py  train_mlp_pytorch.py  visualize_demo.py
examples/qwen3/: PERFORMANCE_ANALYSIS.md  README.md  load_weights.py  model.py  prepare_data.py  qwen3_gt.py  test_model.py  test_simple.py  train.py  train.sh  train_gt.py
examples/tuning_demo/: README.md  launch.py  model.py  sharding_config.yaml  train.py  train_simple.py
gt/: __init__.py  __main__.py  config.py  debug.py  errors.py  signal.py
gt/client/: autograd.py  client.py  nn.py  tensor.py
gt/dispatcher/: dispatcher.py  sharding_modifier.py  tensor_handle.py
gt/nn/: __init__.py
gt/scripts/: README.md  __main__.py  top.py  trace.py  visualize.py  visualize_old.py
gt/server/: __init__.py  __main__.py
gt/transport/: connection.py  protocol.py
gt/worker/: GRAPH_SIGNATURES.md  HOTPATH_INTEGRATION.md  __main__.py  engine.py  hotpath_detector.py  worker.py
gt/worker/engine/: __init__.py  base.py  numpy.py  pytorch.py  pytorch_compile.py
tests/: __init__.py  conftest.py  test_auto_shard.py  test_auto_shard_auto_start.py  test_autograd.py  test_autoshard_simple.py  test_axis_sum.py  test_axis_sum_gradients.py  test_basic_ops.py  test_compilation.py  test_distributed_matmul_patterns.py  test_inplace_ops.py  test_lpm_bugs.py  test_mlp.py  test_multi_client.py  test_new_operations.py  test_nn.py  test_numerics.py  test_operations.py  test_protocol_quick.py  test_reduction.py  test_shard_ordering.py  test_sharding.py  test_signal_sharding.py  test_sqrt_keepdims_bug.py  test_subscripting.py  test_system_basic.py  test_tensor_manipulation.py  test_varying_batch_sizes.py
